# sscma-example-sg200x

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  flake.nix
cmake/: build.cmake  macro.cmake  package.cmake  project.cmake  (+2 more)
components/mongoose/: CMakeLists.txt  mongoose.h
components/sophgo/: CMakeLists.txt
components/sophgo/audio/: CMakeLists.txt  audio.c  audio.h
components/sophgo/audio/include/: ai.h  ao.h  audio_io.h  audio_paramparse.h  cvi_aacdec.h  cvi_aacenc.h  cvi_audio_aac_adp.h  cvi_audio_dl_adp.h
components/sophgo/audio/src/: ai.c  ai_enc.c  ao.c  ao_dec.c  audio_io.c  audio_paramparse.c  cvi_audio_aac_adp.c  cvi_audio_dl_adp.c
components/sophgo/audio_plugin/: CMakeLists.txt  asound.conf  cvi_ain.c  cvi_ain.h  cvi_aio.c  cvi_aio.h  cvi_audio.c  cvi_audio.h  plugin.c  plugin.cpp  plugin.h  plugin_file.c
components/sophgo/common/: app_ipcam_comm.c  app_ipcam_ll.c  app_ipcam_ll.h
components/sophgo/video/: CMakeLists.txt  video.c  video.h
components/sophgo/video/include/: app_ipcam_paramparse.h  app_ipcam_sensors.h  app_ipcam_sys.h  app_ipcam_venc.h  app_ipcam_vi.h  app_ipcam_vpss.h
components/sophgo/video/src/: app_ipcam_sys.c  app_ipcam_vi.c  isp.c  sensors.c  vi.c  video_paramparse.c  vpss.c
solutions/supervisor/: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum
solutions/supervisor/cmd/supervisor/: main.go
solutions/supervisor/files/etc/init.d/: S93sscma-supervisor
solutions/supervisor/internal/api/: response.go
solutions/supervisor/internal/auth/: auth.go
solutions/supervisor/internal/config/: config.go
solutions/supervisor/internal/device/: device.go
solutions/supervisor/internal/handler/: device.go  file.go  led.go  user.go  wifi.go
solutions/supervisor/internal/middleware/: middleware.go
solutions/supervisor/internal/network/: wifi.go  wpa.go
solutions/supervisor/internal/script/: script.go
solutions/supervisor/internal/server/: server.go
solutions/supervisor/internal/system/: device.go  network.go  process.go
solutions/supervisor/internal/tls/: tls.go
solutions/supervisor/internal/upgrade/: upgrade.go
solutions/supervisor/main/: CMakeLists.txt  main.cpp
solutions/supervisor/main/include/: api_base.h  api_device.h  api_file.h  api_halow.h  api_led.h  api_update.h  api_user.h  api_wifi.h  app_daemon.h  common.h  daemon.h  device.h  global_cfg.h  http.h  http_interface.h  http_server.h  logger.hpp  serviced.h  supervisor.h  utils_device.h  utils_user.h  utils_wifi.h
solutions/supervisor/main/scripts/: devicetool.sh  upgrade.sh  usertool.sh  wifitool.sh
solutions/supervisor/main/src/: api_device.cpp  api_halow.cpp  api_user.cpp  api_wifi.cpp  app_daemon.cpp  common.cpp  daemon.cpp  device.cpp  http.cpp  utils_device.cpp  utils_file.cpp  utils_led.cpp  utils_user.cpp  utils_wifi.cpp
solutions/supervisor/opkg/CONTROL/: control  postinst
solutions/supervisor/pkg/logger/: logger.go
solutions/supervisor/rootfs/etc/avahi/services/: sscma.service
solutions/supervisor/rootfs/etc/init.d/: S93sscma-supervisor
solutions/supervisor/rootfs/usr/share/supervisor/: flows.json  flows_gimbal.json
solutions/supervisor/rootfs/usr/share/supervisor/scripts/: devicetool.sh  main.sh  upgrade.sh  wifitool.sh
solutions/supervisor/rootfs/usr/share/supervisor/www/: index.html
solutions/supervisor/rootfs/usr/share/supervisor/www/assets/css/: main.B1WRv9OE.css  main.BIGmfpPO.css  main.C7m-CVQr.css  main.CJ8mJEuj.css  main.Cdr43Zbh.css  main.CkKAUEPe.css  main.CuByFWPw.css  main.CxCvvFgW.css
solutions/supervisor/rootfs/usr/share/supervisor/www/js/: main.2GUB2Kg7.js  main.BAi4ysgV.js  main.BE-ekUI1.js  main.BEoqG1M3.js  main.BUTqeB0I.js  main.BjgvkfFB.js  main.C2lTTIZS.js  main.C6lF3oCa.js  main.CY2oO1mQ.js  main.D95chHXu.js  main.DECW8ipY.js  main.DWx7dypq.js  main.wH5kC9Px.js
solutions/supervisor/www/: .env.development  .env.production  .env.staging  CHANGELOG.md  CMakeLists.txt  Design.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
solutions/supervisor/www/scripts/: deploy.sh
solutions/supervisor/www/src/: App.tsx
solutions/supervisor/www/src/api/device/: device.d.ts  index.ts
solutions/supervisor/www/src/api/files/: index.ts
solutions/supervisor/www/src/api/model/: index.ts  model.d.ts
solutions/supervisor/www/src/api/network/: index.ts  network.d.ts
solutions/supervisor/www/src/api/nodered/: index.ts
solutions/supervisor/www/src/api/sensecraft/: index.ts  sensecraft.d.ts
solutions/supervisor/www/src/api/user/: index.ts  user.d.ts
solutions/supervisor/www/src/components/common-popup/: index.tsx
solutions/supervisor/www/src/components/loading/: index.tsx
solutions/supervisor/www/src/enum/: index.ts  network.ts
solutions/supervisor/www/src/layout/: config.tsx  index.tsx  main.tsx
solutions/supervisor/www/src/layout/mobile/header/: index.tsx
solutions/supervisor/www/src/layout/mobile/sidebar/: index.tsx
solutions/supervisor/www/src/layout/pc/: index.tsx
solutions/supervisor/www/src/router/: index.tsx
solutions/supervisor/www/src/store/: config.ts  platform.ts  user.ts
solutions/supervisor/www/src/utils/: flowDefaults.ts  index.ts  noderedRequest.ts  request.ts  sensecraftRequest.ts  supervisorRequest.ts  validate.ts
solutions/supervisor/www/src/views/dashboard/: index.tsx
solutions/supervisor/www/src/views/files/: index.tsx
solutions/supervisor/www/src/views/init/: index.tsx
solutions/supervisor/www/src/views/login/: index.tsx
solutions/supervisor/www/src/views/network/: hook.ts  index.tsx  init.tsx
solutions/supervisor/www/src/views/nodered/: index.tsx
solutions/supervisor/www/src/views/overview/: hook.ts
solutions/supervisor/www/src/views/power/: index.tsx
solutions/supervisor/www/src/views/security/: hook.ts  index.tsx
solutions/supervisor/www/src/views/system/: hook.ts  hook.tsx  index.tsx
solutions/supervisor/www/src/views/workspace/: ApplicationList.tsx  ModelConversion.tsx  index.module.css  index.tsx
solutions/supervisor/www/src/views/workspace/services/: flowService.ts  trainActionService.tsx
(+402 files in other folders)
